--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ build_flags =
 
 upload_speed = 460800
 monitor_speed = 115200
-monitor_port = /dev/cu.usbserial-14320
+; monitor_port = /dev/cu.usbserial-14320
 
 [env:d1_mini_ota]
 extends = env:d1_mini
