--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:d1_mini]
-platform = espressif8266@2.3.0
+platform = espressif8266
 board = d1_mini
 framework = arduino
 lib_deps = 
